--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,7 @@
 {
-  "compilerOptions": { "baseUrl": "src" },
+  "compilerOptions": {
+    "target": "es6"
+  },
   "exclude": ["node_modules"],
   "include": ["src"]
 }
